@@ -2037,6 +2037,10 @@ ODE_API dReal dJointGetHingeAngleRate (dJointID);
  *
  * When the axis is set, the current position of the attached bodies is
  * examined and that position will be the zero position.
+
+ * The position is the distance, with respect to the zero position,
+ * along the slider axis of body 1 with respect to
+ * body 2. (A NULL body is replaced by the world).
  * @ingroup joints
  */
 ODE_API dReal dJointGetSliderPosition (dJointID);
